# advent-of-code-2021-rs

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: aoc-problem.md
benches/: all.rs
src/: lib.rs  main.rs
src/d1/: p1.rs  p2.rs
src/d10/: p1.rs  p2.rs
src/d11/: mod.rs  p1.rs  p2.rs
src/d12/: p1.rs  p2.rs
src/d13/: p1.rs  p2.rs
src/d14/: p1.rs  p2.rs
src/d15/: p1.rs  p2.rs
src/d16/: p1.rs  p2.rs
src/d17/: p1.rs  p2.rs
src/d18/: p1.rs  p2.rs
src/d19/: p1.rs  p2.rs
src/d2/: p1.rs  p2.rs
src/d20/: p1.rs  p2.rs
src/d21/: p1.rs  p2.rs
src/d22/: p1.rs  p2.rs
src/d23/: p1.rs  p2.rs
src/d24/: p1.rs  p1_brute_force.rs  p2.rs
src/d25/: mod.rs  p1.rs
src/d3/: p1.rs  p2.rs
src/d4/: p1.rs  p2.rs
src/d5/: p1.rs  p2.rs
src/d6/: p1.rs  p2.rs
src/d7/: p1.rs  p2.rs
src/d8/: p1.rs  p2.rs
src/d9/: p1.rs  p2.rs
src/util/: file.rs
