[package]
name = "aoc21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
edition = "2021"
crate-type = ["lib"]


[[bin]]
name = "aoc21"
path = "src/main.rs"

[[bench]]
name = "all"
harness = false

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
criterion = {version="0.3.5", features=["html_reports"]}
fnv = "1.0.7"

[profile.release]
debug = true